--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.4.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.0",
+    "promisify": "^0.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
